# app/Filament/Resources/FeedResource/Pages/EditFeed.php
@@ -31,7 +31,7 @@ class EditFeed extends EditRecord
                     'name' => $newPaymentConfig['name'],
                     'description' => $newPaymentConfig['description'] ?? null,
                     'amount' => $newPaymentConfig['amount'],
-                    'currency' => $newPaymentConfig['currency'] ?? 'IDR',
+                    'currency' => 'IDR',
                     'is_active' => true,
                     'payment_methods' => $newPaymentConfig['payment_methods'] ?? [],
                     'custom_fields' => $newPaymentConfig['custom_fields'] ?? [],
@@ -71,7 +71,7 @@ class EditFeed extends EditRecord
                 'name' => $paymentConfigData['name'] ?? $this->record->paymentConfiguration->name,
                 'description' => $paymentConfigData['description'] ?? $this->record->paymentConfiguration->description,
                 'amount' => $paymentConfigData['amount'] ?? $this->record->paymentConfiguration->amount,
-                'currency' => $paymentConfigData['currency'] ?? $this->record->paymentConfiguration->currency,
+                'currency' => 'IDR',
                 'is_active' => $paymentConfigData['is_active'] ?? $this->record->paymentConfiguration->is_active,
                 'payment_methods' => $paymentConfigData['payment_methods'] ?? $this->record->paymentConfiguration->payment_methods,
                 'custom_fields' => $paymentConfigData['custom_fields'] ?? $this->record->paymentConfiguration->custom_fields,
@@ -102,7 +102,7 @@ class EditFeed extends EditRecord
                 'name' => $this->record->paymentConfiguration->name,
                 'description' => $this->record->paymentConfiguration->description,
                 'amount' => $this->record->paymentConfiguration->amount,
-                'currency' => $this->record->paymentConfiguration->currency,
+
                 'is_active' => $this->record->paymentConfiguration->is_active,
                 'payment_methods' => $this->record->paymentConfiguration->payment_methods,
                 'custom_fields' => $this->record->paymentConfiguration->custom_fields,
